add favicon + discord link

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>France Libre - Communauté</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <style>
     :root {
       --primary: #4da6ff;
@@ -164,7 +165,7 @@
     <div class="card">
       <h2>Nous rejoindre</h2>
       <p>Rejoignez-nous dès maintenant et participez à une aventure collective unique !</p>
-      <a href="https://discord.gg/" class="btn">💬 Rejoindre le Discord</a>
+      <a href="https://discord.frlibre.fr/" class="btn">💬 Rejoindre le Discord</a>
     </div>
   </section>
 
