link staff page

--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
   <nav>
     <a href="#apropos">À propos</a>
     <a href="#projets">Projets</a>
-    <a href="#staff">Staff</a>
-    <a href="#rejoindre">Rejoindre</a>
+    <a href="staff.html">Staff</a>
+    <a href="https://discord.frlibre.fr/">Rejoindre</a>
   </nav>
 
   <section id="apropos">
