add see staff btn to index

--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
       <p>
         Notre communauté est organisée avec un staff actif et une hiérarchie claire. Un <strong>président élu par élections</strong> veille au bon fonctionnement et à la convivialité de la France Libre.
       </p>
+      <a href="staff.html" class="btn">👁️ Voir la liste du staff</a>
     </div>
   </section>
 
