add projects page

--- a/staff.html
+++ b/staff.html
@@ -119,9 +119,9 @@
 
   <nav>
     <a href="index.html#apropos">À propos</a>
-    <a href="index.html#projets">Projets</a>
+    <a href="projets.html">Projets</a>
     <a href="staff.html">Staff</a>
-    <a href="index.html#rejoindre">Rejoindre</a>
+    <a href="https://discord.frlibre.fr/">Rejoindre</a>
   </nav>
 
   <section>
