--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
   <nav>
     <a href="#apropos">À propos</a>
-    <a href="#projets">Projets</a>
+    <a href="projets.html">Projets</a>
     <a href="staff.html">Staff</a>
     <a href="https://discord.frlibre.fr/">Rejoindre</a>
   </nav>
