add projects btn to index

--- a/index.html
+++ b/index.html
@@ -148,6 +148,8 @@
         <li>Un serveur Minecraft collaboratif</li>
         <li>Des webradios diffusées via AzuraCast</li>
         <li>Une passion pour la grande distribution</li>
+        <li>Et d'autres projets...</li>
+        <a href="projets.html" class="btn">🛠️ Voir tous nos projets en détail</a>
       </ul>
     </div>
   </section>
@@ -158,7 +160,7 @@
       <p>
         Notre communauté est organisée avec un staff actif et une hiérarchie claire. Un <strong>président élu par élections</strong> veille au bon fonctionnement et à la convivialité de la France Libre.
       </p>
-      <a href="staff.html" class="btn">👁️ Voir la liste du staff</a>
+      <a href="staff.html" class="btn">🛡️ Voir la liste du staff</a>
     </div>
   </section>
 
