change a propos to accueil

--- a/projets.html
+++ b/projets.html
@@ -55,7 +55,7 @@
   </header>
 
   <nav>
-    <a href="index.html#apropos">À propos</a>
+    <a href="index.html">Accueil</a>
     <a href="projets.html">Projets</a>
     <a href="staff.html">Staff</a>
     <a href="https://discord.frlibre.fr/">Rejoindre</a>
@@ -86,7 +86,7 @@
       </div>
       <div class="project-card">
         <h3>FRLMC</h3>
-        <p>Serveur Minecraft collaboratif sous Forge 1.20.2 avec un modpack de plus de 30 mods, visant à construire une ville.</p>
+        <p>Serveur Minecraft collaboratif sous Forge 1.20.1 avec un modpack de plus de 30 mods, visant à construire une ville.</p>
       </div>
       <div class="project-card">
         <h3>Supercom</h3>
