--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   </header>
 
   <nav>
-    <a href="#apropos">À propos</a>
+    <a href="index.html">Accueil</a>
     <a href="projets.html">Projets</a>
     <a href="staff.html">Staff</a>
     <a href="https://discord.frlibre.fr/">Rejoindre</a>
