--- a/staff.html
+++ b/staff.html
@@ -118,7 +118,7 @@
   </header>
 
   <nav>
-    <a href="index.html#apropos">À propos</a>
+    <a href="index.html">Accueil</a>
     <a href="projets.html">Projets</a>
     <a href="staff.html">Staff</a>
     <a href="https://discord.frlibre.fr/">Rejoindre</a>
