add link page, and remove "cube" from staff page

--- a/projets.html
+++ b/projets.html
@@ -58,6 +58,7 @@
     <a href="index.html">Accueil</a>
     <a href="projets.html">Projets</a>
     <a href="staff.html">Staff</a>
+    <a href="liens.html">Nos liens</a>
     <a href="https://discord.frlibre.fr/">Rejoindre</a>
   </nav>
 
