--- a/staff.html
+++ b/staff.html
@@ -149,6 +149,7 @@
     <a href="index.html">Accueil</a>
     <a href="projets.html">Projets</a>
     <a href="staff.html">Staff</a>
+    <a href="liens.html">Nos liens</a>
     <a href="https://discord.frlibre.fr/">Rejoindre</a>
   </nav>
 
@@ -267,7 +268,7 @@
     <br />
     <h2>Modérateurs</h2>
     <div class="staff-grid">
-      <div class="staff-card">
+      <!-- <div class="staff-card">
         <img class="profile" src="cdn/cube.png" alt="Ilan">
         <h3>Ilan (Cube)</h3>
         <p>Modérateur</p>
@@ -280,7 +281,7 @@
             <img src="cdn/tiktok.svg" alt="TikTok">
           </a>
         </div>
-      </div>
+      </div> -->
       <div class="staff-card">
         <img class="profile" src="cdn/mathys.png" alt="Mathys">
         <h3>Mathys (MrJavel)</h3>
