--- a/liens.html
+++ b/liens.html
@@ -111,9 +111,7 @@
         <div class="links">
             <a href="https://discord.frlibre.fr" class="btn-dsc">Serveur Discord</a>
             <a href="https://24heures.frlibre.fr" class="btn-24h">Replay 24 heures</a>
-            <a href="https://fm.frlibre.fr" class="btn-radio">FM Libre (Radio)</a>
-            <a href="https://www.instagram.com/instafrl/" class="btn-insta">Instagram (FRL)</a>
-            <a href="https://www.instagram.com/premierechaineofficiel/" class="btn-insta">Instagram (Première Chaîne)</a>
+            <!-- <a href="https://fm.frlibre.fr" class="btn-radio">FM Libre (Radio)</a> -->
             <a href="https://mapenseignes.frlibre.fr" class="btn-retail">Carte des succursales dans l'AFOE</a>
         </div>
         <br />
