--- a/staff.html
+++ b/staff.html
@@ -154,7 +154,7 @@
   </nav>
 
   <section>
-    <h2>Fondateur</h2>
+    <!-- <h2>Fondateur</h2>
     <div class="staff-grid">
       <div class="staff-card">
         <img class="profile" src="cdn/raidelf.png" alt="Raidelf">
@@ -170,27 +170,21 @@
           </a>
         </div>
       </div>
-    </div>
+    </div> -->
     <br />
     <h2>Présidence</h2>
     <div class="staff-grid">
       <div class="staff-card">
-        <img class="profile" src="cdn/nathan.png" alt="Nathan">
-        <h3>Nathan (NathxnAzuur)</h3>
-        <p>Président</p>
-        <p>@nathxnazuur</p>
+        <img class="profile" src="cdn/raidelf.png" alt="Raidelf">
+        <h3>Raidelf</h3>
+        <p>Président et Fondateur</p>
+        <p>@raidelf</p>
         <div class="social-links">
-          <a href="https://www.youtube.com/@NathxnAzuur" target="_blank">
+          <a href="https://www.youtube.com/@raidelf62" target="_blank">
             <img src="cdn/youtube.svg" alt="Youtube">
           </a>
-          <a href="https://x.com/nathxnazuur" target="_blank">
-            <img src="cdn/twitter.svg" alt="X (Twitter)">
-          </a>
-          <a href="https://bsky.app/profile/nathxnazuur.fr" target="_blank">
-            <img src="cdn/bluesky.svg" alt="Bluesky">
-          </a>
-          <a href="https://nathxnazuur.fr" target="_blank">
-            <img src="cdn/website.svg" alt="Site web personnel">
+          <a href="https://www.instagram.com/raidelf62" target="_blank">
+            <img src="cdn/instagram.svg" alt="Instagram">
           </a>
         </div>
       </div>
@@ -228,9 +222,47 @@
     <h2>Administrateurs</h2>
     <div class="staff-grid">
       <div class="staff-card">
+        <img class="profile" src="cdn/nathan.png" alt="Nathan">
+        <h3>Nathan (NathxnAzuur)</h3>
+        <p>Administrateur</p>
+        <p>@nathxnazuur</p>
+        <div class="social-links">
+          <a href="https://www.youtube.com/@NathxnAzuur" target="_blank">
+            <img src="cdn/youtube.svg" alt="Youtube">
+          </a>
+          <a href="https://x.com/nathxnazuur" target="_blank">
+            <img src="cdn/twitter.svg" alt="X (Twitter)">
+          </a>
+          <a href="https://bsky.app/profile/nathxnazuur.fr" target="_blank">
+            <img src="cdn/bluesky.svg" alt="Bluesky">
+          </a>
+          <a href="https://nathxnazuur.fr" target="_blank">
+            <img src="cdn/website.svg" alt="Site web personnel">
+          </a>
+        </div>
+      </div>
+      <div class="staff-card">
+        <img class="profile" src="cdn/cube.png" alt="Ilan">
+        <h3>Ilan (Cube)</h3>
+        <p>Administrateur</p>
+        <p>@cube76lh</p>
+        <div class="social-links">
+          <a href="https://www.youtube.com/@nimpus_cube" target="_blank">
+            <img src="cdn/youtube.svg" alt="Youtube">
+          </a>
+          <a href="https://www.tiktok.com/@lecucubenational" target="_blank">
+            <img src="cdn/tiktok.svg" alt="TikTok">
+          </a>
+        </div>
+      </div>
+    </div>
+    <br />
+    <h2>Modérateurs</h2>
+    <div class="staff-grid">
+      <div class="staff-card">
         <img class="profile" src="cdn/adrien.png" alt="Adrien">
         <h3>Adrien</h3>
-        <p>Administrateur</p>
+        <p>Modérateur</p>
         <p>@adri1_radio</p>
         <div class="social-links">
           <a href="https://youtube.com/@adri1_ytb" target="_blank">
@@ -244,7 +276,7 @@
       <div class="staff-card">
         <img class="profile" src="cdn/corian.png" alt="Corian">
         <h3>Corian</h3>
-        <p>Administrateur</p>
+        <p>Modérateur</p>
         <p>@corian62</p>
         <div class="social-links">
           <a href="https://www.youtube.com/@Corian62" target="_blank">
@@ -259,58 +291,11 @@
         </div>
       </div>
       <div class="staff-card">
-        <img class="profile" src="cdn/realstone.png" alt="Pierre">
-        <h3>Pierre (RealStone)</h3>
-        <p>Administrateur</p>
-        <p>@realstone67277</p>
-      </div>
-    </div>
-    <br />
-    <h2>Modérateurs</h2>
-    <div class="staff-grid">
-      <!-- <div class="staff-card">
-        <img class="profile" src="cdn/cube.png" alt="Ilan">
-        <h3>Ilan (Cube)</h3>
+        <img class="profile" src="cdn/#.png" alt="Ryan">
+        <h3>Ryan</h3>
         <p>Modérateur</p>
-        <p>@cube76lh</p>
+        <p>@rca37</p>
         <div class="social-links">
-          <a href="https://www.youtube.com/@nimpus_cube" target="_blank">
-            <img src="cdn/youtube.svg" alt="Youtube">
-          </a>
-          <a href="https://www.tiktok.com/@lecucubenational" target="_blank">
-            <img src="cdn/tiktok.svg" alt="TikTok">
-          </a>
-        </div>
-      </div> -->
-      <div class="staff-card">
-        <img class="profile" src="cdn/mathys.png" alt="Mathys">
-        <h3>Mathys (MrJavel)</h3>
-        <p>Modérateur</p>
-        <p>@mrjavel59</p>
-        <div class="social-links">
-          <a href="https://www.youtube.com/channel/UCTYKNzQoVrU4OlTy3cuKRVw" target="_blank">
-            <img src="cdn/youtube.svg" alt="Youtube">
-          </a>
-          <a href="https://bsky.app/profile/javel59.bsky.social" target="_blank">
-            <img src="cdn/bluesky.svg" alt="Bluesky">
-          </a>
-          <a href="https://soundcloud.com/medias_nrjjingles" target="_blank">
-            <img src="cdn/soundcloud.svg" alt="Soundcloud">
-          </a>
-          <a href="https://www.twitch.tv/javel59" target="_blank">
-            <img src="cdn/twitch.svg" alt="Twitch">
-          </a>
-        </div>
-      </div>
-      <div class="staff-card">
-        <img class="profile" src="cdn/adam.png" alt="Adam">
-        <h3>Adam (Adam68etsestc)</h3>
-        <p>Modérateur</p>
-        <p>@adam68etsestc</p>
-        <div class="social-links">
-          <a href="https://www.youtube.com/@adam68etsestc" target="_blank">
-            <img src="cdn/youtube.svg" alt="Youtube">
-          </a>
         </div>
       </div>
     </div>
