--- a/staff.html
+++ b/staff.html
@@ -291,7 +291,7 @@
         </div>
       </div>
       <div class="staff-card">
-        <img class="profile" src="cdn/#.png" alt="Ryan">
+        <img class="profile" src="cdn/ryan.jpg" alt="Ryan">
         <h3>Ryan</h3>
         <p>Modérateur</p>
         <p>@rca37</p>
