--- a/staff.html
+++ b/staff.html
@@ -292,10 +292,16 @@
       </div>
       <div class="staff-card">
         <img class="profile" src="cdn/ryan.jpg" alt="Ryan">
-        <h3>Ryan</h3>
+        <h3>Ryan (RC')</h3>
         <p>Modérateur</p>
         <p>@rca37</p>
         <div class="social-links">
+          <a href="https://www.youtube.com/@RCA_Canal" target="_blank">
+            <img src="cdn/youtube.svg" alt="Youtube">
+          </a>
+          <a href="https://www.instagram.com/rca_insta" target="_blank">
+            <img src="cdn/instagram.svg" alt="Instagram">
+          </a>
         </div>
       </div>
     </div>
