fusion admin et modo en gouv

--- a/staff.html
+++ b/staff.html
@@ -224,7 +224,7 @@
       <div class="staff-card">
         <img class="profile" src="cdn/nathan.png" alt="Nathan">
         <h3>Nathan (NathxnAzuur)</h3>
-        <p>Administrateur</p>
+        <p>Membre du gouvernement</p>
         <p>@nathxnazuur</p>
         <div class="social-links">
           <a href="https://www.youtube.com/@NathxnAzuur" target="_blank">
@@ -244,7 +244,7 @@
       <div class="staff-card">
         <img class="profile" src="cdn/cube.png" alt="Ilan">
         <h3>Ilan (Cube)</h3>
-        <p>Administrateur</p>
+        <p>Membre du gouvernement</p>
         <p>@cube76lh</p>
         <div class="social-links">
           <a href="https://www.youtube.com/@nimpus_cube" target="_blank">
@@ -255,15 +255,11 @@
           </a>
         </div>
       </div>
-    </div>
-    <br />
-    <h2>Modérateurs</h2>
-    <div class="staff-grid">
       <div class="staff-card">
         <img class="profile" src="cdn/adrien.png" alt="Adrien">
         <h3>Adrien</h3>
-        <p>Modérateur</p>
-        <p>@adri1_radio</p>
+        <p>Membre du gouvernement</p>
+        <p>@adri1_dsc</p>
         <div class="social-links">
           <a href="https://youtube.com/@adri1_ytb" target="_blank">
             <img src="cdn/youtube.svg" alt="Youtube">
@@ -276,7 +272,7 @@
       <div class="staff-card">
         <img class="profile" src="cdn/corian.png" alt="Corian">
         <h3>Corian</h3>
-        <p>Modérateur</p>
+        <p>Membre du gouvernement</p>
         <p>@corian62</p>
         <div class="social-links">
           <a href="https://www.youtube.com/@Corian62" target="_blank">
@@ -287,20 +283,6 @@
           </a>
           <a href="https://soundcloud.com/Corian62" target="_blank">
             <img src="cdn/soundcloud.svg" alt="Soundcloud">
-          </a>
-        </div>
-      </div>
-      <div class="staff-card">
-        <img class="profile" src="cdn/ryan.jpg" alt="Ryan">
-        <h3>Ryan (RC')</h3>
-        <p>Modérateur</p>
-        <p>@rca37</p>
-        <div class="social-links">
-          <a href="https://www.youtube.com/@RCA_Canal" target="_blank">
-            <img src="cdn/youtube.svg" alt="Youtube">
-          </a>
-          <a href="https://www.instagram.com/rca_insta" target="_blank">
-            <img src="cdn/instagram.svg" alt="Instagram">
           </a>
         </div>
       </div>
