--- a/staff.html
+++ b/staff.html
@@ -219,7 +219,7 @@
       </div>
     </div>
     <br />
-    <h2>Administrateurs</h2>
+    <h2>Gouvernement</h2>
     <div class="staff-grid">
       <div class="staff-card">
         <img class="profile" src="cdn/nathan.png" alt="Nathan">
