--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
       font-size: 1.2rem;
       color: rgba(255,255,255,0.85);
     }
+    header img {
+      width: 50%;
+    }
     nav {
       position: sticky;
       top: 0;
@@ -120,6 +123,7 @@
 </head>
 <body>
   <header>
+    <img src="cdn/logofrl.png">
     <h1>🇫🇷 France Libre</h1>
     <p>Communauté conviviale depuis le 13 novembre 2022</p>
   </header>
