la taille du logo là

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       color: rgba(255,255,255,0.85);
     }
     header img {
-      width: 50%;
+      size: 25%;
     }
     nav {
       position: sticky;
@@ -125,7 +125,7 @@
   <header>
     <img src="cdn/logofrl.png">
     <br />
-    <h1>🇫🇷 France Libre</h1>
+    <h1>France Libre</h1>
     <p>Communauté conviviale depuis le 13 novembre 2022</p>
   </header>
 
