la taille du logo ct tro grand la

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       color: rgba(255,255,255,0.85);
     }
     header img {
-      size: 25%;
+      height: 50px;
     }
     nav {
       position: sticky;
