--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <img src="cdn/logofrl.png">
     <br />
     <h1>France Libre</h1>
-    <p>Communauté conviviale depuis le 13 novembre 2022</p>
+    <p>Serveur Discord convivial depuis le 13 novembre 2022</p>
   </header>
 
   <nav>
@@ -141,7 +141,7 @@
     <div class="card">
       <h2>À propos</h2>
       <p>
-        La <strong>France Libre</strong> était à l'origine un pays fictif. Aujourd'hui, c’est une communauté active où chacun peut s’exprimer, créer et participer à des projets collectifs dans une ambiance conviviale.
+        La <strong>France Libre</strong> est un pays fictif. C’est aussi une communauté active où chacun peut s’exprimer, créer et participer à des projets collectifs dans une ambiance conviviale.
       </p>
     </div>
   </section>
