LA PASSION LE PLAISIR LA LIBERTE

--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
       <p>
         La <strong>France Libre</strong> est un pays fictif. C’est aussi une communauté active où chacun peut s’exprimer, créer et participer à des projets collectifs dans une ambiance conviviale.
       </p>
+      <p>
+        Bref, la <strong>France Libre</strong> c'est <i>la passion, le plaisir et la liberté.</i>
+      </p>
     </div>
   </section>
 
