--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
       <h2>Nos projets</h2>
       <ul>
         <li>Un univers fictif riche (groupes, enseignes, télé, radios)</li>
-        <li>Un serveur Minecraft collaboratif</li>
-        <li>Des webradios diffusées via AzuraCast</li>
+        <li>Une map Minecraft collaboratif</li>
+        <!-- <li>Des webradios diffusées via AzuraCast</li> -->
         <li>Une passion pour la grande distribution</li>
         <li>Et d'autres projets...</li>
         <a href="projets.html" class="btn">🛠️ Voir tous nos projets en détail</a>
