oups la fote d'ortograf

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       <h2>Nos projets</h2>
       <ul>
         <li>Un univers fictif riche (groupes, enseignes, télé, radios)</li>
-        <li>Une map Minecraft collaboratif</li>
+        <li>Une map Minecraft collaborative</li>
         <!-- <li>Des webradios diffusées via AzuraCast</li> -->
         <li>Une passion pour la grande distribution</li>
         <li>Et d'autres projets...</li>
