--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <a href="index.html">Accueil</a>
     <a href="projets.html">Projets</a>
     <a href="staff.html">Staff</a>
-    <a href="liens.html">Nos liens</a>
+    <a href="liens.html">Liens</a>
     <a href="https://discord.frlibre.fr/">Rejoindre</a>
   </nav>
 
