--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <a href="projets.html">Projets</a>
     <a href="staff.html">Staff</a>
     <a href="liens.html">Liens</a>
-    <a href="https://discord.frlibre.fr/">Rejoindre</a>
+    <a href="https://discord.frlibre.fr/"><img src="cdn/discord.png" style="height: 20px;"></a>
   </nav>
 
   <section id="apropos">
