add lien nathan

--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
 
   <footer>
     <p>&copy; 2022-2025 France Libre - Tous droits réservés</p>
+    <p>Fait avec amour par <a href="https://nathxnazuur.fr/">NathxnAzuur</a></p>
   </footer>
 </body>
 </html>
