--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
       border-top: 1px solid #333;
       margin-top: 3rem;
     }
+    footer a {
+      text-decoration: none;
+    }
   </style>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
