je vais me faire niquer par maman

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
     }
     footer a {
       text-decoration: none;
+      color: #4da6ff;
     }
   </style>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -186,7 +187,7 @@
 
   <footer>
     <p>&copy; 2022-2025 France Libre - Tous droits réservés</p>
-    <p>Fait avec amour par <a href="https://nathxnazuur.fr/">NathxnAzuur</a></p>
+    <p>Fait avec amour par <strong><a href="https://nathxnazuur.fr/">NathxnAzuur</a></strong></p>
   </footer>
 </body>
 </html>
