--- a/liens.html
+++ b/liens.html
@@ -112,7 +112,7 @@
             <a href="https://discord.frlibre.fr" class="btn-dsc">Serveur Discord</a>
             <a href="https://24heures.frlibre.fr" class="btn-24h">Replay 24 heures</a>
             <!-- <a href="https://fm.frlibre.fr" class="btn-radio">FM Libre (Radio)</a> -->
-            <a href="https://mapenseignes.frlibre.fr" class="btn-retail">Carte des succursales dans l'AFOE</a>
+            <a href="https://map.retail.frlibre.fr" class="btn-retail">Cartes des magasins dans l'AFOE</a>
         </div>
         <br />
         <a href="index.html"><p style="text-decoration: none; color: grey;">Retourner sur le site principal</p></a>
