--- a/liens.html
+++ b/liens.html
@@ -110,7 +110,7 @@
 
         <div class="links">
             <a href="https://discord.frlibre.fr" class="btn-dsc">Serveur Discord</a>
-            <a href="https://24heures.frlibre.fr" class="btn-24h">Replay 24 heures</a>
+            <a href="https://24heures.frlibre.fr" class="btn-24h">Replay de 24 heures</a>
             <!-- <a href="https://fm.frlibre.fr" class="btn-radio">FM Libre (Radio)</a> -->
             <a href="https://map.retail.frlibre.fr" class="btn-retail">Cartes des magasins dans l'AFOE</a>
         </div>
