add realstone and remove arthware

--- a/staff.html
+++ b/staff.html
@@ -204,21 +204,6 @@
       </div>
     </div>
     <br />
-    <h2>Technicien</h2>
-    <div class="staff-grid">
-      <div class="staff-card">
-        <img class="profile" src="cdn/arthware.png" alt="Arthur">
-        <h3>Arthur (ArthWare)</h3>
-        <p>Technicien</p>
-        <p>@arthware</p>
-        <div class="social-links">
-          <a href="https://twitch.tv/nyyyxtra" target="_blank">
-            <img src="cdn/twitch.svg" alt="Twitch">
-          </a>
-        </div>
-      </div>
-    </div>
-    <br />
     <h2>Gouvernement</h2>
     <div class="staff-grid">
       <div class="staff-card">
@@ -285,6 +270,12 @@
             <img src="cdn/soundcloud.svg" alt="Soundcloud">
           </a>
         </div>
+      </div>
+      <div class="staff-card">
+        <img class="profile" src="cdn/realstone.png" alt="Pierre">
+        <h3>Pierre (RealStone)</h3>
+        <p>Membre du gouvernement</p>
+        <p>@realstone67277</p>
       </div>
     </div>
   </section>
