move nathan in développeur in staff page

--- a/staff.html
+++ b/staff.html
@@ -204,12 +204,12 @@
       </div>
     </div>
     <br />
-    <h2>Gouvernement</h2>
+    <h2>Développeur</h2>
     <div class="staff-grid">
       <div class="staff-card">
         <img class="profile" src="cdn/nathan.png" alt="Nathan">
         <h3>Nathan (NathxnAzuur)</h3>
-        <p>Membre du gouvernement</p>
+        <p>Développeur et Membre du gouvernement</p>
         <p>@nathxnazuur</p>
         <div class="social-links">
           <a href="https://www.youtube.com/@NathxnAzuur" target="_blank">
@@ -226,6 +226,10 @@
           </a>
         </div>
       </div>
+    </div>
+    <br />
+    <h2>Gouvernement</h2>
+    <div class="staff-grid">
       <div class="staff-card">
         <img class="profile" src="cdn/cube.png" alt="Ilan">
         <h3>Ilan (Cube)</h3>
