add footer nathxnazuur

--- a/staff.html
+++ b/staff.html
@@ -286,6 +286,7 @@
 
   <footer>
     <p>&copy; 2022-2025 France Libre - Tous droits réservés</p>
+    <p>Fait avec amour par <strong><a href="https://nathxnazuur.fr/">NathxnAzuur</a></strong></p>
   </footer>
 </body>
 </html>
