--- a/projets.html
+++ b/projets.html
@@ -46,6 +46,10 @@
     .project-card h3 {font-size:1.3rem;margin-bottom:.5rem;color:var(--secondary);}
     .project-card p {font-size:.95rem;color:var(--muted);}
     footer {text-align:center;padding:2rem 1rem;background:#1a1a1a;font-size:.9rem;color:var(--muted);border-top:1px solid #333;margin-top:3rem;}
+    footer a {
+      text-decoration: none;
+      color: #4da6ff;
+    }
   </style>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
