--- a/staff.html
+++ b/staff.html
@@ -137,6 +137,10 @@
       border-top: 1px solid #333;
       margin-top: 3rem;
     }
+    footer a {
+      text-decoration: none;
+      color: #4da6ff;
+    }
   </style>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
