add logo n discord logo navbar

--- a/staff.html
+++ b/staff.html
@@ -36,6 +36,9 @@
       font-size: 2.5rem;
       font-weight: 800;
     }
+    header img {
+      height: 75px;
+    }
     nav {
       position: sticky;
       top: 0;
@@ -146,6 +149,8 @@
 </head>
 <body>
   <header>
+    <img src="cdn/logofrl.png">
+    <br />
     <h1>👥 Staff - France Libre</h1>
   </header>
 
@@ -153,8 +158,8 @@
     <a href="index.html">Accueil</a>
     <a href="projets.html">Projets</a>
     <a href="staff.html">Staff</a>
-    <a href="liens.html">Nos liens</a>
-    <a href="https://discord.frlibre.fr/">Rejoindre</a>
+    <a href="liens.html">Liens</a>
+    <a href="https://discord.frlibre.fr/"><img src="cdn/discord.png" style="height: 20px; transform: translateY(3px);"></a>
   </nav>
 
   <section>
