--- a/projets.html
+++ b/projets.html
@@ -29,6 +29,9 @@
       color:white;
     }
     header h1 {font-size:2.5rem;font-weight:800;}
+    header img {
+      height: 75px;
+    }
     nav {
       position:sticky;top:0;background:#1a1a1a;border-bottom:1px solid #333;
       display:flex;justify-content:center;gap:2rem;padding:1rem;z-index:1000;
@@ -55,6 +58,8 @@
 </head>
 <body>
   <header>
+    <img src="cdn/logofrl.png">
+    <br />
     <h1>📌 Projets - France Libre</h1>
   </header>
 
@@ -62,8 +67,8 @@
     <a href="index.html">Accueil</a>
     <a href="projets.html">Projets</a>
     <a href="staff.html">Staff</a>
-    <a href="liens.html">Nos liens</a>
-    <a href="https://discord.frlibre.fr/">Rejoindre</a>
+    <a href="liens.html">Liens</a>
+    <a href="https://discord.frlibre.fr/"><img src="cdn/discord.png" style="height: 20px; transform: translateY(3px);"></a>
   </nav>
 
   <section>
