--- a/staff.html
+++ b/staff.html
@@ -285,7 +285,7 @@
         </div>
       </div>
       <div class="staff-card">
-        <img class="profile" src="cdn/realstone.png" alt="Pierre">
+        <img class="profile" src="cdn/pierre.png" alt="Pierre">
         <h3>Pierre (RealStone)</h3>
         <p>Membre du gouvernement</p>
         <p>@realstone67277</p>
