add socials to pierre

--- a/staff.html
+++ b/staff.html
@@ -289,6 +289,14 @@
         <h3>Pierre (RealStone)</h3>
         <p>Membre du gouvernement</p>
         <p>@realstone67277</p>
+        <div class="social-links">
+          <a href="https://www.reddit.com/user/RealStone67277/" target="_blank">
+            <img src="cdn/reddit.svg" alt="Reddit">
+          </a>
+          <a href="https://www.snapchat.com/@realstone24" target="_blank">
+            <img src="cdn/snapchat.svg" alt="Snapchat">
+          </a>
+        </div>
       </div>
     </div>
   </section>
