--- a/index.html
+++ b/index.html
@@ -3,191 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>France Libre - Communauté</title>
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <title>Non.</title>
   <style>
-    :root {
-      --primary: #4da6ff;
-      --secondary: #ff6b6b;
-      --bg: #121212;
-      --card: #1e1e1e;
-      --text: #f5f5f5;
-      --muted: #aaa;
-      --radius: 1rem;
-    }
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
     body {
-      font-family: 'Montserrat', sans-serif;
-      background: var(--bg);
-      color: var(--text);
-      line-height: 1.6;
-    }
-    header {
-      padding: 4rem 1rem;
-      text-align: center;
-      background: linear-gradient(135deg, var(--primary), var(--secondary));
-      color: white;
-    }
-    header h1 {
-      font-size: 3rem;
-      font-weight: 800;
-    }
-    header p {
-      margin-top: 0.8rem;
-      font-size: 1.2rem;
-      color: rgba(255,255,255,0.85);
-    }
-    header img {
-      height: 75px;
-    }
-    nav {
-      position: sticky;
-      top: 0;
-      background: #1a1a1a;
-      border-bottom: 1px solid #333;
+      margin: 0;
+      height: 100vh;
       display: flex;
+      align-items: center;
       justify-content: center;
-      gap: 2rem;
-      padding: 1rem;
-      z-index: 1000;
+      background: #0f0f0f;
+      color: #ffffff;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
     }
-    nav a {
-      color: var(--text);
-      text-decoration: none;
-      font-weight: 600;
-      transition: color 0.3s;
-    }
-    nav a:hover {
-      color: var(--secondary);
-    }
-    section {
-      max-width: 900px;
-      margin: 3rem auto;
-      padding: 0 1rem;
-      text-align: center;
-    }
-    section h2 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-      color: var(--primary);
-    }
-    section p {
-      color: var(--muted);
-      margin-bottom: 1rem;
-    }
-    ul {
-      text-align: left;
-      display: inline-block;
-      margin-top: 1rem;
-    }
-    ul li {
-      margin-bottom: 0.8rem;
-    }
-    .card {
-      background: var(--card);
-      border-radius: var(--radius);
-      box-shadow: 0 4px 20px rgba(0,0,0,0.4);
-      padding: 2rem;
-      margin-top: 2rem;
-    }
-    .btn {
-      display: inline-block;
-      margin-top: 1.5rem;
-      padding: 0.9rem 1.6rem;
-      background: var(--primary);
-      color: white;
-      border-radius: 999px;
-      text-decoration: none;
-      font-weight: 600;
-      transition: background 0.3s, transform 0.2s;
-    }
-    .btn:hover {
-      background: var(--secondary);
-      transform: translateY(-2px);
-    }
-    footer {
-      text-align: center;
-      padding: 2rem 1rem;
-      background: #1a1a1a;
-      font-size: 0.9rem;
-      color: var(--muted);
-      border-top: 1px solid #333;
-      margin-top: 3rem;
-    }
-    footer a {
-      text-decoration: none;
-      color: #4da6ff;
+
+    h1 {
+      font-size: clamp(3rem, 10vw, 8rem);
+      font-weight: 800;
+      letter-spacing: -0.05em;
     }
   </style>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <img src="cdn/logofrl.png">
-    <br />
-    <h1>France Libre</h1>
-    <p>Serveur Discord convivial depuis le 13 novembre 2022</p>
-  </header>
-
-  <nav>
-    <a href="index.html">Accueil</a>
-    <a href="projets.html">Projets</a>
-    <a href="staff.html">Staff</a>
-    <a href="liens.html">Liens</a>
-    <a href="https://discord.frlibre.fr/"><img src="cdn/discord.png" style="height: 20px; transform: translateY(3px);"></a>
-  </nav>
-
-  <section id="apropos">
-    <div class="card">
-      <h2>À propos</h2>
-      <p>
-        La <strong>France Libre</strong> est un pays fictif. C’est aussi une communauté active où chacun peut s’exprimer, créer et participer à des projets collectifs dans une ambiance conviviale.
-      </p>
-      <p>
-        Bref, la <strong>France Libre</strong> c'est <i>la passion, le plaisir et la liberté.</i>
-      </p>
-    </div>
-  </section>
-
-  <section id="projets">
-    <div class="card">
-      <h2>Nos projets</h2>
-      <ul>
-        <li>Un univers fictif riche (groupes, enseignes, télé, radios)</li>
-        <li>Une map Minecraft collaborative</li>
-        <!-- <li>Des webradios diffusées via AzuraCast</li> -->
-        <li>Une passion pour la grande distribution</li>
-        <li>Et d'autres projets...</li>
-        <a href="projets.html" class="btn">🛠️ Voir tous nos projets en détail</a>
-      </ul>
-    </div>
-  </section>
-
-  <section id="staff">
-    <div class="card">
-      <h2>Le staff</h2>
-      <p>
-        Notre communauté est organisée avec un staff actif et une hiérarchie claire. Un <strong>président élu par élections</strong> veille au bon fonctionnement et à la convivialité de la France Libre.
-      </p>
-      <a href="staff.html" class="btn">🛡️ Voir la liste du staff</a>
-    </div>
-  </section>
-
-  <section id="rejoindre">
-    <div class="card">
-      <h2>Nous rejoindre</h2>
-      <p>Rejoignez-nous dès maintenant et participez à une aventure collective unique !</p>
-      <a href="https://discord.frlibre.fr/" class="btn">💬 Rejoindre le Discord</a>
-    </div>
-  </section>
-
-  <footer>
-    <p>&copy; 2022-2025 France Libre - Tous droits réservés</p>
-    <p>Fait avec amour par <strong><a href="https://nathxnazuur.fr/">NathxnAzuur</a></strong></p>
-  </footer>
+  <h1>Non.</h1>
 </body>
 </html>
