--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
 </head>
 <body>
   <h1>Non.</h1>
+  <p>Rien ne battera Monique Ranou et le saucisson éternel, on touche pas à mon réfrigérateur américain Samsung 2 portes à 1500€ chez Boulanger. Liam le roi du mètre carré avec de l'acier galvanisé, sa tante l'a bien équipé. *drops the mic*</p>
 </body>
 </html>
