--- a/index.html
+++ b/index.html
@@ -1,31 +1,12 @@
 <!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Non.</title>
-  <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: #0f0f0f;
-      color: #ffffff;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-    }
-
-    h1 {
-      font-size: clamp(3rem, 10vw, 8rem);
-      font-weight: 800;
-      letter-spacing: -0.05em;
-    }
-  </style>
-</head>
-<body>
-  <h1>Non.</h1>
-  <br />
-  <p>Rien ne battera Monique Ranou et le saucisson éternel, on touche pas à mon réfrigérateur américain Samsung 2 portes à 1500€ chez Boulanger. Liam le roi du mètre carré avec de l'acier galvanisé, sa tante l'a bien équipé. *drops the mic*</p>
-</body>
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width">
+    <title>LA FRANCE CHIBRE</title>
+  </head>
+  <body>
+    <video controls="" autoplay="" name="media">
+      <source src="cdn/video.mp4" type="video/mp4">
+    </video>
+  </body>
 </html>
