--- a/index.html
+++ b/index.html
@@ -3,6 +3,20 @@
   <head>
     <meta name="viewport" content="width=device-width">
     <title>LA FRANCE CHIBRE</title>
+    <style>
+      body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+        background-color: black;
+      }
+      video {
+        max-width: 100%;
+        max-height: 100%;
+      }
+    </style>
   </head>
   <body>
     <video controls="" autoplay="" name="media">
