--- a/index.html
+++ b/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta name="viewport" content="width=device-width">
-    <title>LA FRANCE CHIBRE</title>
-    <style>
-      body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0;
-        background-color: black;
-      }
-      video {
-        max-width: 100%;
-        max-height: 100%;
-      }
-    </style>
-  </head>
-  <body>
-    <video controls="" autoplay="" name="media">
-      <source src="cdn/video.mp4" type="video/mp4">
-    </video>
-  </body>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>LA FRANCE CHIBRE</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      background: black;
+      overflow: hidden;
+    }
+
+    video {
+      width: 100vw;
+      height: 100vh;
+      object-fit: cover; /* remplit l’écran sans déformer */
+      display: block;
+    }
+  </style>
+</head>
+<body>
+
+  <video autoplay muted loop playsinline>
+    <source src="cdn/video.mp4" type="video/mp4">
+  </video>
+
+</body>
 </html>
