--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>LA FRANCE CHIBRE</title>
+  <title>la france chibre.</title>
   <style>
     html, body {
       margin: 0;
@@ -10,21 +10,25 @@
       width: 100%;
       height: 100%;
       background: black;
-      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     video {
-      width: 100vw;
-      height: 100vh;
-      object-fit: cover; /* remplit l’écran sans déformer */
-      display: block;
+      max-width: 90vw;
+      max-height: 90vh;
+      width: auto;
+      height: auto;
+      background: black;
     }
   </style>
 </head>
 <body>
 
-  <video autoplay muted loop playsinline>
+  <video controls>
     <source src="cdn/video.mp4" type="video/mp4">
+    Ton navigateur ne supporte pas la vidéo.
   </video>
 
 </body>
